# fastapi-project

./: .gitignore  README.md  config.py  database.py  docker-compose.yml  env.example  main.py  mcp_server.py  pyproject.toml  requirements.txt
models/: __init__.py  product.py  user.py
routers/: __init__.py  mcp_tools.py  product.py  user.py
schemas/: __init__.py  mcp.py  product.py  user.py
services/: __init__.py  product_service.py  user_service.py
